--- a/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
+++ b/documentation/source/_themes/fontPartsTheme/static/sass_partials/elements.sass
@@ -123,8 +123,10 @@ h1, h2, h3
 	font-family: $sansfont
 	color: black
 	line-height: 1.2em
-	margin-top: 0
 	padding-top: $header-height //helps position headline visibly when it is directly linked to
+	margin-top: 0
+	margin-bottom: 1rem
+
 h1
 	font-size: 2.25em
 	
